aggregateHly now uses functions

--- a/src/WeatherStation/aggregateDly.ipynb
+++ b/src/WeatherStation/aggregateDly.ipynb
@@ -133,13 +133,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def getDates() -> list:\n",
     "    # figure out the date range for date processing - puts all 365 days as MO-DA into dates\n",
@@ -169,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def reshapeDlyData(dates, agg_df, stationData):\n",
+    "def reshapeDlyData(dates: list, agg_df: pd.DataFrame, stationData: pd.DataFrame) -> pd.DataFrame:\n",
     "    # loads all data where each row is its own dictionary so that it may added to a dataframe later (fast processing)\n",
     "    listForDF = []\n",
     "\n",
