--- a/src/WeatherStation/aggregateDly.ipynb
+++ b/src/WeatherStation/aggregateDly.ipynb
@@ -162,7 +162,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def reshapeDlyData(dates: list, agg_df: pd.DataFrame, stationData: pd.DataFrame) -> pd.DataFrame:\n",
+    "def reshapeDlyData(\n",
+    "    dates: list, agg_df: pd.DataFrame, stationData: pd.DataFrame\n",
+    ") -> pd.DataFrame:\n",
     "    # loads all data where each row is its own dictionary so that it may added to a dataframe later (fast processing)\n",
     "    listForDF = []\n",
     "\n",
