--- a/src/WeatherStation/aggregateHly.ipynb
+++ b/src/WeatherStation/aggregateHly.ipynb
@@ -154,7 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getDates() -> list:    \n",
+    "def getDates() -> list:\n",
     "    # figure out the date range for date processing - puts all 365 days as MO-DA into dates\n",
     "    dates = []  # all 365 days as MO-DA - strings\n",
     "\n",
@@ -182,7 +182,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def reshapeHlyData(dates: list, agg_df: pd.DataFrame, stationData: pd.DataFrame) -> pd.DataFrame:\n",
+    "def reshapeHlyData(\n",
+    "    dates: list, agg_df: pd.DataFrame, stationData: pd.DataFrame\n",
+    ") -> pd.DataFrame:\n",
     "    # loads all data where each row is its own dictionary so that it may added to a dataframe later (fast processing)\n",
     "    listForDF = []\n",
     "\n",
