fixed reshape methods suggested return type

--- a/src/WeatherStation/aggregateHly.ipynb
+++ b/src/WeatherStation/aggregateHly.ipynb
@@ -184,7 +184,7 @@
    "source": [
     "def reshapeHlyData(\n",
     "    dates: list, agg_df: pd.DataFrame, stationData: pd.DataFrame\n",
-    ") -> pd.DataFrame:\n",
+    ") -> list:\n",
     "    # loads all data where each row is its own dictionary so that it may added to a dataframe later (fast processing)\n",
     "    listForDF = []\n",
     "\n",
