--- a/src/WeatherStation/aggregateDly.ipynb
+++ b/src/WeatherStation/aggregateDly.ipynb
@@ -164,7 +164,7 @@
    "source": [
     "def reshapeDlyData(\n",
     "    dates: list, agg_df: pd.DataFrame, stationData: pd.DataFrame\n",
-    ") -> pd.DataFrame:\n",
+    ") -> list:\n",
     "    # loads all data where each row is its own dictionary so that it may added to a dataframe later (fast processing)\n",
     "    listForDF = []\n",
     "\n",
