changed the many print lines into a multi lined print

--- a/src/WeatherStation/StationVisualization.ipynb
+++ b/src/WeatherStation/StationVisualization.ipynb
@@ -432,59 +432,33 @@
     "    activeDlyStations: gpd.GeoDataFrame,\n",
     "    append: str = \"\",\n",
     "):\n",
-    "    print(f\"{append}Raw number of hourly stations: {len(allHlyStations.index)}\")\n",
-    "    print(f\"{append}Raw number of daily stations: {len(allDlyStations.index)}\\n\")\n",
+    "    print(\n",
+    "        f\"\"\"\n",
+    "        {append}Raw number of hourly stations: {len(allHlyStations.index)}\\n\n",
+    "        {append}Raw number of daily stations: {len(allDlyStations.index)}\\n\\n\n",
     "\n",
-    "    print(\n",
-    "        f\"{append}Number of hourly stations that satisfy elevation and have a unique position: {len(hlyStations.index)}\"\n",
-    "    )\n",
-    "    print(\n",
-    "        f\"{append}Number of daily stations that satisfy elevation and have a unique position: {len(dlyStations.index)}\\n\"\n",
-    "    )\n",
+    "        {append}Number of hourly stations that satisfy elevation and have a unique position: {len(hlyStations.index)}\\n\n",
+    "        {append}Number of daily stations that satisfy elevation and have a unique position: {len(dlyStations.index)}\\n\\n\n",
     "\n",
-    "    print(\n",
-    "        f\"{append}The following statistics describe the restricted set of weather stations:\"\n",
-    "    )\n",
-    "    print(\n",
-    "        f'\\t{append}Number of hourly stations with at least 5 years of data: {len(coloredHlyStations[coloredHlyStations[\"color\"] == hasLessThan5Col])}'\n",
-    "    )\n",
-    "    print(\n",
-    "        f'\\t{append}Number of daily stations with at least 5 years of data: {len(coloredDlyStations[coloredDlyStations[\"color\"] == hasLessThan5Col])}\\n'\n",
-    "    )\n",
+    "        {append}The following statistics describe the restricted set of weather stations:\\n\n",
+    "        {append}\\tNumber of hourly stations with at least 5 years of data: {len(coloredHlyStations[coloredHlyStations[\"color\"] == hasLessThan5Col])}\\n\n",
+    "        {append}\\tNumber of daily stations with at least 5 years of data: {len(coloredDlyStations[coloredDlyStations[\"color\"] == hasLessThan5Col])}\\n\\n\n",
     "\n",
-    "    print(\n",
-    "        f'\\t{append}Number of hourly stations with at least 10 years of data: {len(coloredHlyStations[coloredHlyStations[\"color\"] == hasLessThan10Col])}'\n",
-    "    )\n",
-    "    print(\n",
-    "        f'\\t{append}Number of daily stations with at least 10 years of data: {len(coloredDlyStations[coloredDlyStations[\"color\"] == hasLessThan10Col])}\\n'\n",
-    "    )\n",
+    "        {append}\\tNumber of hourly stations with at least 10 years of data: {len(coloredHlyStations[coloredHlyStations[\"color\"] == hasLessThan10Col])}\\n\n",
+    "        {append}\\tNumber of daily stations with at least 10 years of data: {len(coloredDlyStations[coloredDlyStations[\"color\"] == hasLessThan10Col])}\\n\\n\n",
     "\n",
-    "    print(\n",
-    "        f'\\t{append}Number of hourly stations with at least 15 years of data: {len(coloredHlyStations[coloredHlyStations[\"color\"] == hasLessThan15Col])}'\n",
-    "    )\n",
-    "    print(\n",
-    "        f'\\t{append}Number of daily stations with at least 15 years of data: {len(coloredDlyStations[coloredDlyStations[\"color\"] == hasLessThan15Col])}\\n'\n",
-    "    )\n",
+    "        {append}\\tNumber of hourly stations with at least 15 years of data: {len(coloredHlyStations[coloredHlyStations[\"color\"] == hasLessThan15Col])}\\n\n",
+    "        {append}\\tNumber of daily stations with at least 15 years of data: {len(coloredDlyStations[coloredDlyStations[\"color\"] == hasLessThan15Col])}\\n\\n\n",
     "\n",
-    "    print(\n",
-    "        f'\\t{append}Number of hourly stations with at least 20 years of data: {len(coloredHlyStations[coloredHlyStations[\"color\"] == hasLessThan20Col])}'\n",
-    "    )\n",
-    "    print(\n",
-    "        f'\\t{append}Number of daily stations with at least 20 years of data: {len(coloredDlyStations[coloredDlyStations[\"color\"] == hasLessThan20Col])}\\n'\n",
-    "    )\n",
-    "\n",
-    "    print(\n",
-    "        f'\\t{append}Number of hourly stations with more than 20 years of data: {len(coloredHlyStations[coloredHlyStations[\"color\"] == hasMoreThan20Col])}'\n",
-    "    )\n",
-    "    print(\n",
-    "        f'\\t{append}Number of daily stations with more than 20 years of data: {len(coloredDlyStations[coloredDlyStations[\"color\"] == hasMoreThan20Col])}\\n'\n",
-    "    )\n",
-    "\n",
-    "    print(\n",
-    "        f\"\\t{append}Number of hourly stations that were active as of 2022: {len(activeHlyStations.index)}\"\n",
-    "    )\n",
-    "    print(\n",
-    "        f\"\\t{append}Number of daily stations that were active as of 2022: {len(activeDlyStations.index)}\\n\"\n",
+    "        {append}\\tNumber of hourly stations with at least 20 years of data: {len(coloredHlyStations[coloredHlyStations[\"color\"] == hasLessThan20Col])}\\n\n",
+    "        {append}\\tNumber of daily stations with at least 20 years of data: {len(coloredDlyStations[coloredDlyStations[\"color\"] == hasLessThan20Col])}\\n\\n\n",
+    "    \n",
+    "        {append}\\tNumber of hourly stations with more than 20 years of data: {len(coloredHlyStations[coloredHlyStations[\"color\"] == hasMoreThan20Col])}\\n\n",
+    "        {append}\\tNumber of daily stations with more than 20 years of data: {len(coloredDlyStations[coloredDlyStations[\"color\"] == hasMoreThan20Col])}\\n\\n\n",
+    "    \n",
+    "        {append}\\tNumber of hourly stations that were active as of 2022: {len(activeHlyStations.index)}\\n\n",
+    "        {append}\\tNumber of daily stations that were active as of 2022: {len(activeDlyStations.index)}\\n\\n\n",
+    "        \"\"\"\n",
     "    )"
    ]
   },
@@ -529,6 +503,7 @@
     "    activeDistHlyStations = activeHlyStations[\n",
     "        activeHlyStations[\"district\"] == currDistrict\n",
     "    ]\n",
+    "\n",
     "    allDistDlyStations = allDlyStations[allDlyStations[\"district\"] == currDistrict]\n",
     "    dlyDistStations = dlyStations[dlyStations[\"district\"] == currDistrict]\n",
     "    coloredDistDlyStations = coloredDlyStations[\n",
