modified newline characters one more

--- a/src/WeatherStation/StationVisualization.ipynb
+++ b/src/WeatherStation/StationVisualization.ipynb
@@ -435,26 +435,26 @@
     "    print(\n",
     "        f\"\"\"\n",
     "        {append}Raw number of hourly stations: {len(allHlyStations.index)}\n",
-    "        {append}Raw number of daily stations: {len(allDlyStations.index)}\\n\n",
+    "        {append}Raw number of daily stations: {len(allDlyStations.index)}\n",
     "\n",
     "        {append}Number of hourly stations that satisfy elevation and have a unique position: {len(hlyStations.index)}\n",
-    "        {append}Number of daily stations that satisfy elevation and have a unique position: {len(dlyStations.index)}\\n\n",
+    "        {append}Number of daily stations that satisfy elevation and have a unique position: {len(dlyStations.index)}\n",
     "\n",
     "        {append}The following statistics describe the restricted set of weather stations:\n",
     "        {append}\\tNumber of hourly stations with at least 5 years of data: {len(coloredHlyStations[coloredHlyStations[\"color\"] == hasLessThan5Col])}\n",
-    "        {append}\\tNumber of daily stations with at least 5 years of data: {len(coloredDlyStations[coloredDlyStations[\"color\"] == hasLessThan5Col])}\\n\n",
+    "        {append}\\tNumber of daily stations with at least 5 years of data: {len(coloredDlyStations[coloredDlyStations[\"color\"] == hasLessThan5Col])}\n",
     "\n",
     "        {append}\\tNumber of hourly stations with at least 10 years of data: {len(coloredHlyStations[coloredHlyStations[\"color\"] == hasLessThan10Col])}\n",
-    "        {append}\\tNumber of daily stations with at least 10 years of data: {len(coloredDlyStations[coloredDlyStations[\"color\"] == hasLessThan10Col])}\\n\n",
+    "        {append}\\tNumber of daily stations with at least 10 years of data: {len(coloredDlyStations[coloredDlyStations[\"color\"] == hasLessThan10Col])}\n",
     "\n",
     "        {append}\\tNumber of hourly stations with at least 15 years of data: {len(coloredHlyStations[coloredHlyStations[\"color\"] == hasLessThan15Col])}\n",
-    "        {append}\\tNumber of daily stations with at least 15 years of data: {len(coloredDlyStations[coloredDlyStations[\"color\"] == hasLessThan15Col])}\\n\n",
+    "        {append}\\tNumber of daily stations with at least 15 years of data: {len(coloredDlyStations[coloredDlyStations[\"color\"] == hasLessThan15Col])}\n",
     "\n",
     "        {append}\\tNumber of hourly stations with at least 20 years of data: {len(coloredHlyStations[coloredHlyStations[\"color\"] == hasLessThan20Col])}\n",
-    "        {append}\\tNumber of daily stations with at least 20 years of data: {len(coloredDlyStations[coloredDlyStations[\"color\"] == hasLessThan20Col])}\\n\n",
+    "        {append}\\tNumber of daily stations with at least 20 years of data: {len(coloredDlyStations[coloredDlyStations[\"color\"] == hasLessThan20Col])}\n",
     "    \n",
     "        {append}\\tNumber of hourly stations with more than 20 years of data: {len(coloredHlyStations[coloredHlyStations[\"color\"] == hasMoreThan20Col])}\n",
-    "        {append}\\tNumber of daily stations with more than 20 years of data: {len(coloredDlyStations[coloredDlyStations[\"color\"] == hasMoreThan20Col])}\\n\n",
+    "        {append}\\tNumber of daily stations with more than 20 years of data: {len(coloredDlyStations[coloredDlyStations[\"color\"] == hasMoreThan20Col])}\n",
     "    \n",
     "        {append}\\tNumber of hourly stations that were active as of 2022: {len(activeHlyStations.index)}\n",
     "        {append}\\tNumber of daily stations that were active as of 2022: {len(activeDlyStations.index)}\\n\n",
