--- a/src/SatelliteSoilMoisture/PullMoistureData.ipynb
+++ b/src/SatelliteSoilMoisture/PullMoistureData.ipynb
@@ -15,10 +15,8 @@
     "\n",
     "\n",
     "sys.path.append(\"../\")\n",
-    "sys.path.append(\"../Shared/\")\n",
-    "\n",
-    "from SoilMoistureQueryHandler import SoilMoistureQueryHandler  # type: ignore\n",
-    "from Shared.DataService import DataService  # type: ignore"
+    "from SoilMoistureQueryHandler import SoilMoistureQueryHandler\n",
+    "from Shared.DataService import DataService"
    ]
   },
   {
@@ -226,7 +224,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.6"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
