updated Data_step csv import geo boundaries

--- a/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
+++ b/src/WeatherStation/Data_step csv import geo boundaries stations.ipynb
@@ -39,6 +39,8 @@
     "import jupyter_black as bl  # type: ignore\n",
     "from matplotlib import pyplot as plt  # type: ignore\n",
     "from dotenv import load_dotenv\n",
+    "\n",
+    "sys.path.append(\"../\")\n",
     "from Shared.DataService import DataService"
    ]
   },
@@ -510,11 +512,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdfProjected.rename(columns={\"CARuid\": \"car_uid\"}, inplace=True)\n",
+    "gdfProjected.rename(columns={\"CARuid\": \"district\"}, inplace=True)\n",
     "gdfProjected.rename(columns={\"CARname\": \"car_name\"}, inplace=True)\n",
     "gdfProjected.rename(columns={\"PRuid\": \"pr_uid\"}, inplace=True)\n",
     "gdfProjected.rename(columns={\"AGuid\": \"ag_uid\"}, inplace=True)\n",
     "gdfProjected.rename(columns={\"CRnum\": \"cr_num\"}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a911830b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get both rows corresponding to district 4840 and 4841 respectively\n",
+    "districts4841And4840 = gdfProjected.loc[\n",
+    "    (gdfProjected[\"district\"] == 4840) | (gdfProjected[\"district\"] == 4841)\n",
+    "]\n",
+    "\n",
+    "# merge their geometries into the row with district 4840\n",
+    "gdfProjected.loc[\n",
+    "    gdfProjected[\"district\"] == 4840, \"geometry\"\n",
+    "] = districts4841And4840.unary_union\n",
+    "\n",
+    "# update the name to reflect the entirety of the district\n",
+    "gdfProjected.loc[\n",
+    "    gdfProjected[\"district\"] == 4840, \"car_name\"\n",
+    "] = \"Census Agricultural Region 4\"\n",
+    "\n",
+    "# delete district 4841 which is now apart of 4840\n",
+    "gdfProjected.drop(gdfProjected.loc[gdfProjected[\"district\"] == 4841].index)"
    ]
   },
   {
