--- a/src/WeatherStation/modDist4841.ipynb
+++ b/src/WeatherStation/modDist4841.ipynb
@@ -24,6 +24,31 @@
     "# stations_dly - district\n",
     "# stations_hly - district"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get both rows corresponding to district 4840 and 4841 respectively\n",
+    "districts4841And4840 = gdfProjected.loc[\n",
+    "    (gdfProjected[\"district\"] == 4840) | (gdfProjected[\"district\"] == 4841)\n",
+    "]\n",
+    "\n",
+    "# merge their geometries into the row with district 4840\n",
+    "gdfProjected.loc[\n",
+    "    gdfProjected[\"district\"] == 4840, \"geometry\"\n",
+    "] = districts4841And4840.unary_union\n",
+    "\n",
+    "# update the name to reflect the entirety of the district\n",
+    "gdfProjected.loc[\n",
+    "    gdfProjected[\"district\"] == 4840, \"car_name\"\n",
+    "] = \"Census Agricultural Region 4\"\n",
+    "\n",
+    "# delete district 4841 which is now apart of 4840\n",
+    "gdfProjected.drop(gdfProjected.loc[gdfProjected[\"district\"] == 4841].index)"
+   ]
   }
  ],
  "metadata": {
