labeledSoil district is now an integer and all other districts are automatically adjusted across all tables now

--- a/src/importSoil/labelSoil.ipynb
+++ b/src/importSoil/labelSoil.ipynb
@@ -186,7 +186,9 @@
     "labeledSoil = pd.DataFrame(soil.drop(columns=[\"geometry\", \"color\"]))\n",
     "\n",
     "labeledSoil.rename(columns={labeledSoil.columns[0]: \"id\"}, inplace=True)\n",
-    "labeledSoil.rename(columns={labeledSoil.columns[2]: \"soil_ids\"}, inplace=True)"
+    "labeledSoil.rename(columns={labeledSoil.columns[2]: \"soil_ids\"}, inplace=True)\n",
+    "\n",
+    "labeledSoil[[\"car_uid\"]] == labeledSoil[[\"car_uid\"]].astype(int)"
    ]
   },
   {
