--- a/src/WeatherStation/modDist4841.ipynb
+++ b/src/WeatherStation/modDist4841.ipynb
@@ -19,7 +19,7 @@
     "from dotenv import load_dotenv\n",
     "import os, sys\n",
     "import numpy as np\n",
-    "import pandas as pd \n",
+    "import pandas as pd  # type: ignore\n",
     "import geopandas as gpd  # type: ignore\n",
     "import sqlalchemy as sq\n",
     "\n",
@@ -103,7 +103,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def updateAllValues(table: str, colName: str, oldVal: int, newVal: int, db: DataService):\n",
+    "def updateAllValues(\n",
+    "    table: str, colName: str, oldVal: int, newVal: int, db: DataService\n",
+    "):\n",
     "    updateAllValuesQuery = sq.text(\n",
     "        f\"\"\"\n",
     "        UPDATE public.{table}\n",
@@ -124,8 +126,10 @@
    "source": [
     "def correctRegions(conn: sq.engine.Connection, db: DataService):\n",
     "    regionQuery = sq.text(\"select * FROM public.census_ag_regions\")\n",
-    "    agRegions =  gpd.GeoDataFrame.from_postgis(regionQuery, conn, crs=\"EPSG:3347\", geom_col=\"geometry\")\n",
-    "    \n",
+    "    agRegions = gpd.GeoDataFrame.from_postgis(\n",
+    "        regionQuery, conn, crs=\"EPSG:3347\", geom_col=\"geometry\"\n",
+    "    )\n",
+    "\n",
     "    # get both rows corresponding to district 4840 and 4841 respectively\n",
     "    districts4841And4840 = agRegions.loc[\n",
     "        (agRegions[\"car_uid\"] == 4840) | (agRegions[\"car_uid\"] == 4841)\n",
@@ -147,7 +151,7 @@
     "    # rename the car_uid column to district\n",
     "    agRegions.rename(columns={\"car_uid\": \"district\"}, inplace=True)\n",
     "\n",
-    "    dropRegionsQuery = sq.text('DROP TABLE public.census_ag_regions;')\n",
+    "    dropRegionsQuery = sq.text(\"DROP TABLE public.census_ag_regions;\")\n",
     "    db.execute(dropRegionsQuery)\n",
     "    agRegions.to_postgis(AG_REGIONS_TABLENAME, conn, index=False, if_exists=\"replace\")"
    ]
@@ -158,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def main():    \n",
+    "def main():\n",
     "    if (\n",
     "        PG_DB is None\n",
     "        or PG_ADDR is None\n",
@@ -172,20 +176,22 @@
     "    conn = db.connect()\n",
     "\n",
     "    tables = getTables(conn)\n",
-    "    for index, row in tables.iterrows():\n",
+    "    for index, row in tables.iterrows():  # for each table, check their columns\n",
     "        columns = getColumns(row[\"table_name\"], conn)\n",
-    "        columnList = columns['column_name'].tolist()\n",
-    "        \n",
+    "\n",
+    "        # creates a list out of the columns pulled from the table\n",
+    "        columnList = columns[\"column_name\"].tolist()\n",
+    "\n",
     "        # if the current table has a column named car_uid or district, check it out\n",
-    "        if 'car_uid' in columnList:\n",
+    "        if \"car_uid\" in columnList:\n",
     "            if row[\"table_name\"] == AG_REGIONS_TABLENAME:\n",
     "                correctRegions(conn, db)\n",
     "            else:\n",
-    "                updateColumnName(row[\"table_name\"], 'car_uid', 'district', db)\n",
-    "                updateAllValues(row[\"table_name\"], 'district', 4841, 4840, db)\n",
-    "                \n",
-    "        elif 'district' in columnList:\n",
-    "            updateAllValues(row[\"table_name\"], 'district', 4841, 4840, db)\n",
+    "                updateColumnName(row[\"table_name\"], \"car_uid\", \"district\", db)\n",
+    "                updateAllValues(row[\"table_name\"], \"district\", 4841, 4840, db)\n",
+    "\n",
+    "        elif \"district\" in columnList:\n",
+    "            updateAllValues(row[\"table_name\"], \"district\", 4841, 4840, db)\n",
     "\n",
     "        print(f'[{index + 1}/{len(tables)}] Finished updating {row[\"table_name\"]}')\n",
     "\n",
