Added try catch incase typing is non satisfactory

--- a/src/WeatherStation/modDist4841.ipynb
+++ b/src/WeatherStation/modDist4841.ipynb
@@ -180,18 +180,24 @@
     "        # creates a list out of the columns pulled from the table\n",
     "        columnList = columns[\"column_name\"].tolist()\n",
     "\n",
-    "        # if the current table has a column named car_uid or district, check it out\n",
-    "        if \"car_uid\" in columnList:\n",
-    "            if row[\"table_name\"] == AG_REGIONS_TABLENAME:\n",
-    "                correctRegions(conn, db)\n",
-    "            else:\n",
-    "                updateColumnName(row[\"table_name\"], \"car_uid\", \"district\", db)\n",
+    "        try:\n",
+    "            # if the current table has a column named car_uid or district, check it out\n",
+    "            if \"car_uid\" in columnList:\n",
+    "                if row[\"table_name\"] == AG_REGIONS_TABLENAME:\n",
+    "                    correctRegions(conn, db)\n",
+    "                else:\n",
+    "                    updateColumnName(row[\"table_name\"], \"car_uid\", \"district\", db)\n",
+    "                    updateAllValues(row[\"table_name\"], \"district\", 4841, 4840, db)\n",
+    "\n",
+    "            elif \"district\" in columnList:\n",
     "                updateAllValues(row[\"table_name\"], \"district\", 4841, 4840, db)\n",
     "\n",
-    "        elif \"district\" in columnList:\n",
-    "            updateAllValues(row[\"table_name\"], \"district\", 4841, 4840, db)\n",
-    "\n",
-    "        print(f'[{index + 1}/{len(tables)}] Finished updating {row[\"table_name\"]}')\n",
+    "            print(f'[{index + 1}/{len(tables)}] Finished updating {row[\"table_name\"]}')\n",
+    "        except Exception as e:\n",
+    "            print(\n",
+    "                f'[{index + 1}/{len(tables)}] ERROR - could not update {row[\"table_name\"]}'\n",
+    "            )\n",
+    "            print(e)\n",
     "\n",
     "    db.cleanup()"
    ]
